# TrustQueryNet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-colab.txt
artifacts/: README.md
configs/: README.md  full_ham10000_convnext.yaml  full_ham10000_convnext_no_querying.yaml  full_ham10000_convnext_no_weighted.yaml  pilot_ham10000.yaml  q1_ham10000_convnext_clean_upper.yaml  q1_ham10000_convnext_gce_no_repair.yaml  q1_ham10000_convnext_no_repair.yaml  q1_ham10000_convnext_random_repair.yaml  q1_ham10000_convnext_repair.yaml  q1_ham10000_convnext_weighted_secondary.yaml  quick_cifar100.yaml  quick_cifar100_active.yaml
docs/: final_results_tables.md  mini_paper_draft.md  paper_abstract.md  paper_package_manifest.md  portfolio_copy.md  supplementary_appendix.md
notebooks/: trustquerynet_colab.ipynb  trustquerynet_local.ipynb
paper/: README.md  build_pdfs.sh  references.bib  references_used.md  trustquerynet_abstract.tex  trustquerynet_paper.bbl  trustquerynet_paper.tex
scripts/: audit_ham10000_isic2019_overlap.py  download_ham10000.py  download_isic2019_external.py  download_isic_cli.sh  export_ablation_table.py  export_paper_figures.py  export_results_bundle.py  export_significance_table.py  link_ham10000_from_drive.py  prepare_ham10000.py  run_experiment.py  run_external_validation.py  run_multiseed_experiment.py  stage_ham10000_local.py  verify_q1_phase_gate.py
tests/: test_ablation.py  test_acquisition.py  test_checkpointing.py  test_ham10000.py  test_isic2019.py  test_metrics.py  test_multiseed.py  test_noise.py  test_phase_gate.py  (+4 more)
(+103 files in other folders)
